@@ -251,9 +251,11 @@
 #define ARM_ARCH_V7M	ARM_FEATURE_CORE_LOW (ARM_AEXT_V7M)
 #define ARM_ARCH_V7EM	ARM_FEATURE_CORE_LOW (ARM_AEXT_V7EM)
 #define ARM_ARCH_V8A	ARM_FEATURE_CORE_LOW (ARM_AEXT_V8A)
-#define ARM_ARCH_V8_1A	ARM_FEATURE_CORE (ARM_AEXT_V8A, ARM_EXT2_PAN)
-#define ARM_ARCH_V8_2A	ARM_FEATURE_CORE (ARM_AEXT_V8A, \
-					  ARM_EXT2_PAN | ARM_EXT2_V8_2A)
+#define ARM_ARCH_V8_1A	ARM_FEATURE (ARM_AEXT_V8A, ARM_EXT2_PAN, \
+				     CRC_EXT_ARMV8)
+#define ARM_ARCH_V8_2A	ARM_FEATURE (ARM_AEXT_V8A, \
+				     ARM_EXT2_PAN | ARM_EXT2_V8_2A,	\
+				     CRC_EXT_ARMV8)
 
 /* Some useful combinations:  */
 #define ARM_ARCH_NONE	ARM_FEATURE_LOW (0, 0)
